# pororo

./: .gitignore  pyproject.toml  setup.py
command/: run_ner.py
docs/source/: conf.py
ops/: Dockerfile  docker-compose.yaml
pororo/tasks/: pos_tagging.py
src/: main.py  run_ner.py
