[tool.poetry]
name = "pororo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.8"
torch = "1.6"
wget = "^3.2"
transformers = "4.1.1"
torchvision = "0.7.0"
lxml = "^4.9.3"
scipy = "1.6.2"
sentence-transformers = "1.2.1"
fairseq = "0.10.2"
emoji = "1.2.0"
ipadic = "^1.0.0"
fugashi = "^1.3.0"
g2pk = "^0.9.4"
word2word = "^1.0.0"
librosa = "^0.10.1"
fastdtw = "^0.3.4"
python-mecab-ko = "^1.3.3"
kollocate = "^0.0.2"
koparadigm = "^0.10.0"
epitran = "^1.24"
g2p-en = "^2.1.0"
ko-pron = "^1.3"
g2pm = "^0.1.2.5"
joblib = "^1.3.2"
opencv-python = "^4.8.0.76"
jieba = "^0.42.1"
kss = "^4.5.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"

[tool.poetry.scripts]
ner = "command.run_ner:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
